 =======================================================================
 ==CHANGES.txt
 =======================================================================

Gora Change Log

0.3 (trunk) Current Development:

* GORA-131 gora-cassandra should support other key types than String (Kazuomi Kashii via lewismc)

* GORA-132 Uses ByteBufferSerializer for column value to support various data types rather than StringSerializer (Kazuomi Kashii via lewismc)

* GORA-77 Replace commons logging with Log4j (Renato Javier Marroquín Mogrovejo via lewismc)

* GORA-134 ListGenericArray's hashCode causes StackOverflowError (Kazuomi Kashii via lewismc)

* GORA-95 Catch incorrect mapping configurations and implement sufficient logging in CassandraMapping. (lewismc)

* GORA-** Commit to fix classloading for CLI execution (lewismc)

* GORA-122 gora-accumulo/lib is not cleaned after mvn clean (lewismc)

* GORA-133 & 63 GoraCompiler cannot compile array type & bin/compile-examples.sh does not work respectively (enis, Kazuomi Kashii via lewismc)

* GORA-129 redundant conf field in HBaseStore (ferdy)

* GORA-123 Append correct submodule directories to SCM paths in submodule pom's (lewismc)

* GORA-127 Result objects are not closed properly from GoraRecordReader. (enis)

0.2 Release: 20/04/2012
Jira Release Report: https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311172&version=12315541
 
* GORA-120 Dirty fields are not correctly applied after serialization and map clearance (ferdy)
 
* GORA-115 Flushing HBaseStore should flush all HTable instances. (ferdy)

* Make hbase autoflush default to false and make autoflush configurable rather than hardcoded (stack via lewismc)

* GORA-76 Upgrade to Hadoop 1.0.1 (ferdy & lewismc)

* GORA-65 Initial checkin of gora accumulo datastore (kturner)

* GORA-108 Change CassandraClient#init() to CassandraClient#initialize() for consistency with other Datastores. (lewismc)
